log/build_2024-11-12_19-15-21/drone_delivery/stderr.log
  File "/home/loris/Documents/Projects/ROS2/drone_delivery/install/drone_delivery/lib/python3.12/site-packages/drone_delivery/drone_control.py", line 176
    elif fineControl == 1 or fineControl == 0:
    ^^^^
SyntaxError: invalid syntax

